# Changelog
All notable changes to this project will be documented in this file.

## [1.9.8] 2026-02-02

### Added
- Added "START" and "END" keywords to Min/Max Frame selection for easier trajectory range handling.

### Fixed
- Corrected PAD (Plane Angle Distribution) calculations to match v1.0.4 results.

## [1.9.7] 2026-01-29

### Changed
- Removed `theta_cut` argument from `calculatePAD` (fixed to 180°).
- Refactored `CMakeLists.txt` to modularize dependencies and tests.
## [1.9.6] 2026-01-27

### Added
- Implemented asynchronous analysis to prevent the GUI from freezing during calculations.
- Added a progress bar to visualize analysis status.
- Separated "Analyze" and "Write Files" into distinct actions.

### Fixed
- Fixed implicit capture of `this` warning in `AppController.cpp` (C++20).

## [1.9.5] 2026-01-26

### Added
- Implemented trajectory averaging to calculate mean distributions over selected frames.
- Added controls for frame range selection (Minimum/Maximum Frame).
- Enhanced `FileInfoCard` to show detailed file statistics: frame count, element types/counts, and total atoms.

### Changed
- Refined `AppWindow` layout to a two-column design for better use of screen space.
- Improved component visibility: inactive UI elements are now disabled instead of hidden.
- Refactored `DistributionFunctions` to support histogram accumulation.
- Refactored test suite to utilize the `Trajectory` object for consistent frame handling.

### Fixed
- Re-implemented HDF5 dimension scales using the HDF5 High Level (HL) C API to resolve missing `makeScale` support in the C++ wrapper.
- Fixed a syntax error in `src/main.cpp`.

## [1.9.4] 2026-01-26
 
 ### Added
 - Added `Element-Any` and `Any-Any` columns to the Coordination Number (CN) distribution for aggregated neighbor counting.
 - Added descriptions and unit metadata to HDF5 output groups and datasets.
 - Added trajectory revision to support removing duplicated frames.
 - Added parsing of frame energy from `.arc` files.