@@ -91,6 +91,7 @@ bundle_windows_dlls(correlation)
 #-----------------------------------------------------------
 # Testing
 #-----------------------------------------------------------
+enable_testing()
 add_subdirectory(tests)
 
 #-----------------------------------------------------------
