@@ -9,6 +9,9 @@ All notable changes to this project will be documented in this file.
 ### Fixed
 - Corrected PAD (Plane Angle Distribution) calculations to match v1.0.4 results.
 
+### Changed
+- Updated progress bar to reflect Structure Analyzer progress (splitting 70/30 with Distribution Functions).
+
 ## [1.9.7] 2026-01-29
 
 ### Changed
